	    (c) allows to pass additional arguments to the command executed in
	        the chroot environment
	  (thanks to Wolf Geldmacher).
    * uck-remaster reflects swap of $1<>$2 for uck-remaster-chroot-rootfs
      (thanks to Wolf Geldmacher).
    * uck-remaster-clean-all was added (thanks to Wolf Geldmacher)
    * some man files were updated

------------
-- 2.0.12 --
------------

* GUI:
	* splash notes were updated
	* a new configuration screen was added to allow selecting which
	  languages will be available on the livecd boot splash (gfxboot).
	  This was necessary because the language packs codes do not match
	  gfxbook locales.
	* the default gfxboot language can be chosen only between the
	  gfxboot available languages (easier selection).
	* default gfxboot language selection was made mandatory
	
* Backend:
	* a workaround for the chrooted gnome-terminal was implemented

------------
-- 2.0.11 --
------------

* GUI:
	* ISO mime type check was removed because new Ubuntu ISOs
	  have "x-iso9660" mime type
	* a bug with cd language selection was solved
	  (thanks to Wolf Geldmacher)
	
* Backend:
	* .lz initrd support was added (thanks to Wolf Geldmacher)
	* new isolinux configuration format is now supported
	  (thanks to Wolf Geldmacher)
	* if a local copy of gfxboot-theme-ubuntu is found inside ~/tmp
	  it won't be downloaded from bzr, allowing better customizations
	  (thanks to Wolf Geldmacher)
	* gfxboot-theme-ubuntu source download routine was completely rewritten
	  using wget instead of bzr

------------
-- 2.0.10 --
------------

* GUI:
	* a workaroud for right ISO format detection was added (#271677)
	* languages list was updated to karmic
	
* Backend:	
	* dbus-uuidgen support was moved to uck-remaster-chroot-rootfs
	* a bug with xauth files was solved
	* now we bind the whole /tmp inside the remaster-root

-----------
-- 2.0.9 --
-----------

* GUI:
	* If you don't select a language pack to install, you're not asked